
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## 3.10.2 2024-10-07
### Fixed
- Regression introduced in 3.10.0 where the waiting lists were not displayed anymore
- Issue in waiting slots admin where the search was not working


## 3.10.1 2024-10-02
### Fixed
- Memcached compatibility with Django 3.2
- Do not display register button for courses that are disabled

## 3.10.0 2024-09-27
### Added
- Possibility to allow or disallow registrations for a given course

## 3.9.2 2024-09-11
### Changed
- Better XLS output for invoices. Ordered as in the view, columns with a nice width.


## 3.9.1 2024-09-06
### Fixed
- Issue preventing the export of courses if start or end date is not set

### Changed
- Course export now contains visibility

## 3.9.0 2024-08-19
### Fixed
- Issue preventing the sending of confirmation emails when user is validated through waiting list
- Issue breaking navigation if the user has one 0.- open bill. This can happen if the administrator changes the bill
    amount after the registration is done.
- Issue where reminder emails where sent again and again if the registration was not paid.

### Added
- New setting "KEPCHUP_DISPLAY_COURSE_NUMBER_INSTEAD_OF_ACTIVITY" to display the couse number on the activities
    selection page instead of the activity name (e.g. Basket 1 instead of Basket).

### Changed
- Reminder delay set to 48h for La Tour de Peilz
- If course.number starts with a letter, then we don't display Course #xxx in the activities detail page


## 3.8.4 2024-08-14
### Added
- Button to register from activities if registration is open
- Intelligent phone number search in users view
- Custom labelling of id lagapeo

### Fixed
- Display of dates in invoices and registered activities lists
- Visibility toggle was broken on multiple course edit


## 3.8.3 2024-08-06
### Added
- Payment date
- Payments export

